config/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: "::"
          port_value: 3999
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: stacks_node
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/v2"
                          route:
                            cluster: stacks_core
                        - match:
                            prefix: "/"
                          route:
                            cluster: stacks_api
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: Accept, Accept-Language, Content-Language, Content-Type, Range
                        max_age: "1728000"
  clusters:
    - name: stacks_api
      type: STATIC
      connect_timeout: 10s
      load_assignment:
        cluster_name: stacks_api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 23999
    - name: stacks_core
      type: STATIC
      connect_timeout: 10s
      load_assignment:
        cluster_name: stacks_core
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 20443
